# voice-assistant

./: main.py  pyproject.toml
