[tool.poetry]
name = "voice-assistant"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pyjokes = "^0.6.0"
pyttsx3 = "^2.90"
twilio = "^6.50.1"
wikipedia = "^1.4.0"
wolframalpha = "^4.1.1"
clint = "^0.5.1"
ecapture = "^0.1.8"
music2storage = "^0.2.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
