[tool.poetry]
name = "voice-assistant"
version = "0.1.0"
description = ""
authors = ["repl.it user <replituser@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
wikipedia = "^1.4.0"
wolframalpha = "^4.1.1"
ecapture = "^0.1.8"
music2storage = "^0.2.1"
pyjokes = "^0.6.0"
pyttsx3 = "^2.90"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
